Создал логику для uploadAvatar также немножко изменил работу сервисов
